remove token from example

--- a/personas/biidule.json.example
+++ b/personas/biidule.json.example
@@ -1,5 +1,5 @@
 {
-	"token": "MTAzOTk1ODU1Mzc2MDM4NzE3Mw.GiWsPq.8Zamu22vmkeBAogwk_CzR6E2o_fN-XohGXZ5Tw",
+	"token": "p1acE_Y0uR-ToK3n_heRe",
 	"frequence": "0",
 	"expressions": [
 		"?",
