--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ."
+    "start": "node .",
+    "check-types": "tsc --project ./jsconfig.json"
   },
   "author": "Ambi",
   "license": "ISC",
   "dependencies": {
     "discord.js": "^14.0.2"
+  },
+  "devDependencies": {
+    "typescript": "^5.5.3"
   }
 }
