add Jenkinsfile for CI/CD pipeline configuration + move scripts to package.json

--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "start": "node .",
-    "check-types": "tsc --project ./jsconfig.json"
+    "check-types": "tsc --project ./jsconfig.json",
+    "screen:start": "screen -dmS personas npm start",
+    "screen:stop": "screen -S personas -X quit",
+    "screen:restart": "npm run screen:stop && npm run screen:start"
   },
   "author": "Ambi",
   "license": "ISC",
